[workspace]
members = [
    "parser",
    "circom",
    "compiler",
    "type_analysis",
    "circom_algebra",
    "constraint_list",
    "program_structure",
    "constraint_generation",
    "constraint_writers",
    "constant_tracking",
    "code_producers",
    "dag"
]

[patch.crates-io]
mlir-sys = { git = "https://github.com/Veridise/mlir-sys" }
melior = { git = "https://github.com/Veridise/melior" }

[workspace.dependencies]
melior = "0.24.0"
mlir-sys = "0.5.0"
