[package]
name = "circom"
version = "2.1.3"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

description = "circom is a zkSnark circuit compiler"
homepage = "https://iden3.io/circom"
documentation = "https://docs.circom.io"
repository = "https://github.com/iden3/circom"
readme = "README.md"
keywords = ["zkproofs", "zksanrks","circuits","compiler"]
categories = ["compilers"]

[dependencies]
parser = {path = "../parser"}
program_structure = { path = "../program_structure" }
type_analysis = { path = "../type_analysis" }
constraint_generation = { path = "../constraint_generation" }
constraint_writers = { path = "../constraint_writers" }
compiler = { path = "../compiler" }
summary = { path = "../summary" }
circuit_passes = { path = "../circuit_passes" }
code_producers = { path = "../code_producers" }
dag = { path = "../dag" }
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
exitcode = "1.1.2"
serde = "1.0.82"
serde_derive = "1.0.91"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "=2.0.8"
predicates = "3.0.3"
assert_fs = "=1.0.12"
regex = "1.8.3"
lazy_static = "1.4.0"
rand = "0.8.5"

[build-dependencies]
glob = "0.3.1"
