[package]
name = "circuit_passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constraint_generation = {path = "../constraint_generation"}
compiler = {path = "../compiler"}
program_structure = {path = "../program_structure"}
code_producers = {path = "../code_producers"}
intervallum = "1.4.0"
circom_algebra = {path = "../circom_algebra"}
const_format = "0.2.31"
indexmap = "2.0.0"
codespan-reporting = "0.9.0"
paste = "1.0.14"
