[package]
name = "compiler"
version = "2.1.3"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies]
constant_tracking = {path = "../constant_tracking"}
program_structure = {path = "../program_structure"}
code_producers = {path = "../code_producers"}

either = "1.8.0"
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
rand = "0.8.5"
pretty = "0.12.1"
serde_json = "1.0"
serde = "1.0"
